Cleanup all mixins
Signed-off-by: Florian Reuth <git@florianreuth.de>